2009.05.30 Kentaro FUKUCHI <fukuchi@megaui.net>
	* configure.ac, libqrencode.pc.in:
	  - New option "--enable-thread-safety" has been added. This option is
	    enabled by default.

2009.05.21 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c, qrencode_inner.h:
	  - MQRraw_* has been implemented.
	  - Code cleanups. Struct QRRaw_code is slightly changed.
	* tests/test_qrencode.c:
	  - Added new test.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Merged from 3.1.0 branch. (rev 2248:HEAD)
	* mqrspec.[ch], tests/create_mqr_frame_pattern.c:
	  - MQRspec_getEccSpec() has been deleted.
	* tests/create_mqr_frame_pattern.c, tests/Makefile.am:
	  - Newly added.
	* mask.[ch], tests/test_mask.c, qrencode_inner.h:
	  - Code cleanups.
	  - Unnecessary memcpy has been eliminated.
	  - New test program has been added.
	* mmask.[ch], qrencode_inner.h, tests/test_mmask.c, Makefile.am, tests/Makefile.am:
	  - Mask module for Micro QR Code has been added.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c, qrinput.c, qrencode.c:
	  - Some compile warnings cleared.
	* qrencode.c, tests/test_qrencode.c:
	  - NULL check of an input arg has been added to
	    QRcode_encodeString8bit().
	  - NULL check test and empty string test have been added for
	    QRcode_encodeString8bit().
	* qrinput.h, qrencode_inner.h, split.c:
	  - Copyright year updates.
	* split.[ch]:
	  - Split_splitStringToQRinput() set errno EINVAL if input string is
	    NULL or empty.
	  - Documentation improved.
	* qrenc.c:
	  - perror() is now used to show the details of some errors.
	* qrencode.[ch]:
	  - Some functions now set errno appropriately.
	  - Typo fixes.

2009.05.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* tests/create_frame_pattern.c, tests/Makefile.am:
	  - New test tool "create_frame_pattern" has been added.
	* tests/test_qrspec.c:
	  - test_alignment1() has been replaced with test_newframe().
	    test_newframe() compares newly created frames with frame pattern