@@ -25,12 +25,16 @@
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
  */
 
+#include "config.h"
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 #include <errno.h>
+#ifdef HAVE_LIBPTHREAD
+#include <pthread.h>
+#endif
 
-#include "config.h"
 #include "qrspec.h"
 
 /******************************************************************************
@@ -394,6 +398,9 @@ unsigned int QRspec_getFormatInfo(int mask, QRecLevel level)
 /* C99 says that static storage shall be initialized to a null pointer
  * by compiler. */
 static unsigned char *frames[QRSPEC_VERSION_MAX + 1];
+#ifdef HAVE_LIBPTHREAD
+static pthread_mutex_t frames_mutex = PTHREAD_MUTEX_INITIALIZER;
+#endif
 
 /**
  * Put a finder pattern.
@@ -517,9 +524,15 @@ unsigned char *QRspec_newFrame(int version)
 
 	if(version < 1 || version > QRSPEC_VERSION_MAX) return NULL;
 
+#ifdef HAVE_LIBPTHREAD
+	pthread_mutex_lock(&frames_mutex);
+#endif
 	if(frames[version] == NULL) {
 		frames[version] = QRspec_createFrame(version);
 	}
+#ifdef HAVE_LIBPTHREAD
+	pthread_mutex_unlock(&frames_mutex);
+#endif
 	if(frames[version] == NULL) return NULL;
 
 	width = qrspecCapacity[version].width;
